fixing li spacing for first item menu footer

--- a/pattern-lab/source/_patterns/02-molecules/02-navs/02-footer-navigation.scss
+++ b/pattern-lab/source/_patterns/02-molecules/02-navs/02-footer-navigation.scss
@@ -38,6 +38,11 @@
           padding-left: 0;
         }
       }
+      @media screen and (min-width: $medium-screen + 1) and (max-width: $narrow-screen) {
+        &:first-child {
+          padding-left: 17px;
+        }
+      }
       padding: 15px 40px 15px 15px;
       margin-bottom: 0;
       a {
